java {
    sourceCompatibility = JavaVersion.VERSION_17
}

dependencies {
    implementation("junit:junit:4.13.2")
    implementation("org.mockito:mockito-core:4.0.0")
    implementation("org.mockito:mockito-junit-jupiter:4.0.0")


    implementation("org.junit.jupiter:junit-jupiter-api:5.3.1")
    implementation("org.junit.jupiter:junit-jupiter-engine:5.3.1")
}

